# actix-web-middleware-keycloak-auth

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  lint.yml
examples/: README.md  custom_claims.rs  paperclip.rs  simple.rs
src/: errors.rs  extractor.rs  extractors.rs  lib.rs  paperclip.rs  roles.rs
tests/: middleware.rs
