[package]
name = "actix-web-middleware-keycloak-auth"
version = "0.4.0-beta.2"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2021"
description = "A middleware for Actix Web that handles authentication with a JWT emitted by Keycloak"
repository = "https://github.com/dsferruzza/actix-web-middleware-keycloak-auth"
readme = "README.md"
documentation = "https://docs.rs/actix-web-middleware-keycloak-auth"
categories = ["authentication", "web-programming::http-server"]
keywords = ["actix-web", "middleware", "authentication", "jwt", "keycloak"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
log = "0.4.16"
jsonwebtoken = "8.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde"] }
paperclip = { git = "https://github.com/paperclip-rs/paperclip", version = "0.6.1", rev = "3477c5d22850cf6bd440dd20267dfdae300db40e", default-features = false, features = ["actix4"], optional = true }

[dev-dependencies]
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
env_logger = "0.9.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[features]
default = []
paperclip_compat = ["paperclip"]
