[package]
name = "actix-web-middleware-keycloak-auth"
version = "0.4.2"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2021"
description = "A middleware for Actix Web that handles authentication with a JWT emitted by Keycloak"
repository = "https://github.com/dsferruzza/actix-web-middleware-keycloak-auth"
readme = "README.md"
documentation = "https://docs.rs/actix-web-middleware-keycloak-auth"
categories = ["authentication", "web-programming::http-server"]
keywords = ["actix-web", "middleware", "authentication", "jwt", "keycloak"]
license = "MIT"

[dependencies]
actix-web = { version = "4.4.0", default-features = false }
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
log = "0.4.20"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde"] }
paperclip = { version = "0.8.2", default-features = false, features = ["actix4"], optional = true }

[dev-dependencies]
actix-web = { version = "4.4.0", default-features = false, features = ["macros"] }
env_logger = "0.10.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[features]
default = []
paperclip_compat = ["paperclip"]
