[package]
name = "actix-web-middleware-keycloak-auth"
version = "0.4.2"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2021"
description = "A middleware for Actix Web that handles authentication with a JWT emitted by Keycloak"
repository = "https://github.com/dsferruzza/actix-web-middleware-keycloak-auth"
readme = "README.md"
documentation = "https://docs.rs/actix-web-middleware-keycloak-auth"
categories = ["authentication", "web-programming::http-server"]
keywords = ["actix-web", "middleware", "authentication", "jwt", "keycloak"]
license = "MIT"

[[example]]
name = "custom_claims"
path = "examples/custom_claims.rs"
required-features = ["paperclip_compat"]

[[example]]
name = "paperclip"
path = "examples/paperclip.rs"
required-features = ["paperclip_compat"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["paperclip_compat"]

[dependencies]
actix-web = { version = "4.9.0", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
log = "0.4.22"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.10.0", features = ["serde"] }
paperclip = { version = "0.9.1", default-features = false, features = ["actix4", "paperclip-actix"], optional = true }

[dev-dependencies]
actix-web = { version = "4.4.0", default-features = false, features = ["macros"] }
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[features]
default = []
paperclip_compat = ["paperclip"]
